GNOME Bugzilla – Bug 699140
Baseline support breaks height-for-width in event box
Last modified: 2013-05-07 13:22:27 UTC
Created attachment 242713 [details] Labels alone in a grid do height-for-width properly I've tracked this down to this commit: commit 8fbd6e2edc771ca4fa9d63993d3e9f585d3eeeca Author: Alexander Larsson <alexl@redhat.com> Date: Tue Mar 26 11:08:33 2013 +0100 Attaching examples...
Created attachment 242714 [details] Event boxes don't do height-for-width properly anymore This is pretty much the same layout except that the labels are inside event boxes. To try either tests, run: glade-previewer -f event-boxes-dont-wrap-in-grid.glade or for the working test: glade-previewer -f labels-wrap-in-grid.glade
FWIW, I'm not doing any active regression hunt. This one was very obvious and stands out in Glade, since we use a setup like this for our property display labels: GtkEventBox { GtkBox { GtkImage (for a possible warning icon), GtkLabel (they all wrap) } } We use an event box in order to display a generic context menu which allows one to reset the property to default value or read documentation for the property.
Created attachment 243396 [details] [review] GtkEventBox: Correctly handle height for width We need to pass on the width to the child.
Attachment 243396 [details] pushed as c6a5b80 - GtkEventBox: Correctly handle height for width
That was a lame bug, thanks for catching it.
(In reply to comment #5) > That was a lame bug, thanks for catching it. Thankyou for fixing it ! ;-) Any chance I can get you to also fix GtkCheckButton ?
Does it have the same bug?
Ah, that has already been fixed by benjamin