GtkEventBox: Correctly handle height for width

We need to pass on the width to the child.

https://bugzilla.gnome.org/show_bug.cgi?id=699140